# ibuild

./: README.md  ibuild.cabal  stack.yaml
src/: DSet.hs  Hashed.hs  Store.hs  Task.hs  VerifyingTraces.hs
