name:                ibuild
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ollef/ibuild#readme
license:             BSD3
license-file:        LICENSE
author:              Olle Fredriksson
maintainer:          fredriksson.olle@gmail.com
copyright:           2018 Olle Fredriksson
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -Wtabs
                       -funbox-strict-fields
  hs-source-dirs:      src
  exposed-modules:
                       DSet
                       Hashed
                       Store
                       Task
                       VerifyingTraces
  build-depends:       base >= 4.7 && < 5
                     , dependent-map
                     , hashable
                     , mtl
                     , protolude
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/githubuser/ibuild
